--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -12,6 +12,18 @@
 .products {
     display: flex;
     flex-wrap: wrap;
+
+   
+    p {
+        color: grey;
+        font-size: 0.8rem;
+    }
+    .price-text {
+        color: black;
+        font-size: 1rem;
+    }
+
+   
 }
 
 .card {
@@ -27,7 +39,18 @@
     object-fit: cover;
 }
 
-p{
-    text-decoration: none;
-    color: black;
+.page-selector {
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 2rem 0;
+
+
+    .page-button {
+        background-color: #2CB1BA;
+        border: none;
+        font-size: 1rem;
+        border-radius: 0.6rem;
+        padding: 0.3rem;
+    }
 }
