--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,10 +5,10 @@ header {
     position:fixed;
     top:0;
     width: 100vw;
+    border-bottom: 1px solid lightgray;
     
     div {
       height: inherit;
-      border: 1px solid #000;
       display: flex;
       align-items: center;
       justify-content: center;
