--- a/src/components/Signin/Signin.scss
+++ b/src/components/Signin/Signin.scss
@@ -14,6 +14,9 @@
     height: 600px;
     border-radius: 30px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .form-container p {
     font-size: 26px;
