Updating links from local to Heroku

--- a/src/pages/Payment/Payment.scss
+++ b/src/pages/Payment/Payment.scss
@@ -1,6 +1,10 @@
 .Payment {
     text-align: center;
     padding-top: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
   }
   
   .App-logo {
